--- a/Component/branches/SobiPro-1.1/Site/etc/adm/section_menu.ini
+++ b/Component/branches/SobiPro-1.1/Site/etc/adm/section_menu.ini
@@ -16,8 +16,8 @@
 ; $HeadURL: https://svn.suski.eu/SobiPro/Component/trunk/Site/etc/adm/section_menu.ini $
 
 [AMN.ENT_CAT]
-entry.add = AMN.ADD_ENTRY
-category.add = AMN.ADD_CAT 
+;entry.add = AMN.ADD_ENTRY
+;category.add = AMN.ADD_CAT
 section.entries = AMN.ALL_ENTRIES
 
 [AMN.SEC_CFG]
