category chooser fields - missing only Stree

--- a/Component/branches/SobiPro-1.1/Site/usr/templates/default/config.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/templates/default/config.ini
@@ -17,6 +17,6 @@
 
 [general]
 template_type = "xslt"
-css_files = "default"
-js_files = "alpha,jquery"
+css_files = "default, bootstrap"
+js_files = "alpha, jquery, bootstrap"
 functions="template.php"
