--- a/Component/branches/SobiPro-1.1/Site/etc/adm/config_menu.ini
+++ b/Component/branches/SobiPro-1.1/Site/etc/adm/config_menu.ini
@@ -16,7 +16,7 @@
 ; $HeadURL: https://svn.suski.eu/SobiPro/Component/trunk/Site/etc/adm/config_menu.ini $
 
 [GB.CFG.GLOBAL_CONFIG]
-config.general=GB.CFG.GLOBAL_CONFIGURATION
+config.global=GB.CFG.GLOBAL_CONFIGURATION
 filter=GB.FILTERS
 requirements=GB.REQUIREMENTS
 error=GB.ERROR_LOG
