Pagination für Entries und Categories gestyled Pagination for Fields begonnen

--- a/Component/branches/SobiPro-1.1/Site/etc/adm/config.ini
+++ b/Component/branches/SobiPro-1.1/Site/etc/adm/config.ini
@@ -74,6 +74,7 @@ path_separator = " >> "
 [adm_list]
 cats_limit		= 15
 entries_limit	= 25
+fields_limit    = 15
 
 [apps]
 global_types_array = "field|acl|global_application|language|module"
