Sorting by field asc/desc popover style initial section values pagination revised section configuration finished

--- a/Component/branches/SobiPro-1.1/Site/etc/config.ini
+++ b/Component/branches/SobiPro-1.1/Site/etc/config.ini
@@ -40,7 +40,6 @@ tooltip_class = "editlinktip hasTip"
 editor = "cms.html.editor"
 pre_to_entities = true
 
-
 [date]
 publishing_format = "Y-m-d H:i:s"
 log_format = "D M j G:i:s T Y"
@@ -86,8 +85,8 @@ keys_append = true
 [category]
 show_intro = true
 show_icon = true
-parse_desc = true
-show_desc = true
+parse_desc = false
+show_desc = false
 
 [list]
 cat_desc = false
@@ -104,20 +103,20 @@ field_description = false
 
 [alphamenu]
 letters = "A,B,C,D,E,F,G,H,I,J,K,L,M,N,O,P,Q,R,S,T,U,V,W,X,Y,Z,0-9"
-verify = true
+verify = false
 show = true
 field_types = "json://['inbox','select','chbxgroup','multiselect']"
 
 [redirects]
-section_enabled = false
+section_enabled = true
 section_url = "index.php"
-section_msgtype = "error"
+section_msgtype = "info"
 section_msg = "UNAUTHORIZED_ACCESS"
-category_enabled = false
+category_enabled = true
 category_url = "index.php"
-category_msgtype = "error"
+category_msgtype = "info"
 category_msg = "UNAUTHORIZED_ACCESS"
-entry_enabled = false
+entry_enabled = true
 entry_url = "index.php"
-entry_msgtype = "error"
+entry_msgtype = "info"
 entry_msg = "UNAUTHORIZED_ACCESS"
