--- a/Component/branches/SobiPro-1.1/Site/etc/config.ini
+++ b/Component/branches/SobiPro-1.1/Site/etc/config.ini
@@ -120,3 +120,7 @@ entry_enabled = true
 entry_url = "index.php"
 entry_msgtype = "info"
 entry_msg = "UNAUTHORIZED_ACCESS"
+
+[legacy]
+maxCats = 5
+sigsiutree = false
