Business Directory cleaned Category field added to Business Directory index.html added/changed

--- a/Component/branches/SobiPro-1.1/Site/usr/templates/default/entry/edit.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/templates/default/entry/edit.ini
@@ -18,7 +18,7 @@
 [general]
 template_type = "xslt"
 css_files = "default, edit"
-js_files = "jquery, simplemodal, edit, osx"
+js_files = "jquery, edit"
 
 [form]
 action = "index.php"
