(+) Possibility to define exact type of custom output including header content type, exit and clear

--- a/Component/branches/SobiPro-1.1/Site/usr/templates/default/feeds/rss.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/templates/default/feeds/rss.ini
@@ -22,3 +22,8 @@ entries_limit = 5
 entries_recursive = true
 categories_limit = 0
 entries_ordering = "createdTime.desc"
+
+[output]
+header = "Content-Type: application/xml; charset=utf-8"
+close = true
+clear = true
