--- a/Component/branches/SobiPro-1.1/Admin/field/edit.ini
+++ b/Component/branches/SobiPro-1.1/Admin/field/edit.ini
@@ -1,4 +1,4 @@
-; @version: $Id: edit.ini 551 2011-01-11 14:34:26Z Radek Suski $
+; @version: $Id$
 ; @package: SobiPro Component for Joomla!
 ; ===================================================
 ; @author
@@ -10,10 +10,10 @@
 ; @license see http://www.gnu.org/licenses/gpl.html GNU/GPL Version 3.
 ; You can use, redistribute this file and/or modify it under the terms of the GNU General Public License version 3
 ; ===================================================
-; $Date: 2011-01-11 15:34:26 +0100 (Tue, 11 Jan 2011) $
-; $Revision: 551 $
-; $Author: Radek Suski $
-; $HeadURL: https://svn.suski.eu/SobiPro/Component/trunk/Admin/field/edit.ini $
+; $Date$
+; $Revision$
+; $Author$
+; $HeadURL$
 
 [general]
 site_title 		= "edit=FM.EDIT_FIELD|add=Add New Field"
