--- a/Component/branches/SobiPro-1.1/Site/etc/adm/config.ini
+++ b/Component/branches/SobiPro-1.1/Site/etc/adm/config.ini
@@ -1,19 +1,23 @@
-; @version: $Id: config.ini 2318 2012-03-27 12:03:46Z Radek Suski $
+; @version: $Id$
 ; @package: SobiPro Component for Joomla!
-; ===================================================
+
 ; @author
 ; Name: Sigrid Suski & Radek Suski, Sigsiu.NET GmbH
 ; Email: sobi[at]sigsiu.net
 ; Url: http://www.Sigsiu.NET
-; ===================================================
-; @copyright Copyright (C) 2006 - 2011 Sigsiu.NET (http://www.sigsiu.net). All rights reserved.
-; @license see http://www.gnu.org/licenses/gpl.html GNU/GPL Version 3.
-; You can use, redistribute this file and/or modify it under the terms of the GNU General Public License version 3
-; ===================================================
-; $Date: 2012-03-27 14:03:46 +0200 (Tue, 27 Mar 2012) $
-; $Revision: 2318 $
-; $Author: Radek Suski $
-; $HeadURL: https://svn.suski.eu/SobiPro/Component/trunk/Site/etc/adm/config.ini $
+
+; @copyright Copyright (C) 2006 - 2013 Sigsiu.NET GmbH (http://www.sigsiu.net). All rights reserved.
+; @license GNU/GPL Version 3
+; This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3 as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
+; See http://www.gnu.org/licenses/gpl.html and http://sobipro.sigsiu.net/licenses.
+
+; This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
+
+; $Date$
+; $Revision$
+; $Author$
+; $HeadURL$
+
 
 [editing]
 def_cout_time = 3600
