--- a/Component/branches/SobiPro-1.1/Site/etc/files.ini
+++ b/Component/branches/SobiPro-1.1/Site/etc/files.ini
@@ -1,18 +1,22 @@
-; @version: $Id: download.ini 1985 2011-11-09 18:04:42Z Radek Suski $
-; @package: Download Field Application for SobiPro Component
-; ===================================================
+; @version: $Id$
+; @package: SobiPro Component for Joomla!
+
 ; @author
 ; Name: Sigrid Suski & Radek Suski, Sigsiu.NET GmbH
 ; Email: sobi[at]sigsiu.net
 ; Url: http://www.Sigsiu.NET
-; ===================================================
-; @copyright Copyright (C) 2006 - 2011 Sigsiu.NET GmbH (http://www.sigsiu.net). All rights reserved.
-; @license see http://www.gnu.org/licenses/gpl.html GNU/GPL Version 3.
-; You can use, redistribute this file and/or modify it under the terms of the GNU General Public License version 3
-; ===================================================
-; $Date: 2011-11-09 19:04:42 +0100 (Wed, 09 Nov 2011) $
-; $Revision: 1985 $
-; $Author: Sigrid Suski
+
+; @copyright Copyright (C) 2006 - 2013 Sigsiu.NET GmbH (http://www.sigsiu.net). All rights reserved.
+; @license GNU/GPL Version 3
+; This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3 as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
+; See http://www.gnu.org/licenses/gpl.html and http://sobipro.sigsiu.net/licenses.
+
+; This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
+
+; $Date$
+; $Revision$
+; $Author$
+; $HeadURL$
 
 abc=text/vnd.abc
 afl=video/animaflex
