--- a/Component/branches/SobiPro-1.1/Site/etc/paypal.ini
+++ b/Component/branches/SobiPro-1.1/Site/etc/paypal.ini
@@ -1,19 +1,22 @@
-; @version: $Id: paypal.ini 658 2011-01-27 18:46:34Z Radek Suski $
+; @version: $Id$
 ; @package: SobiPro Component for Joomla!
-; ===================================================
+
 ; @author
 ; Name: Sigrid Suski & Radek Suski, Sigsiu.NET GmbH
 ; Email: sobi[at]sigsiu.net
 ; Url: http://www.Sigsiu.NET
-; ===================================================
-; @copyright Copyright (C) 2006 - 2011 Sigsiu.NET GmbH (http://www.sigsiu.net). All rights reserved.
-; @license see http://www.gnu.org/licenses/gpl.html GNU/GPL Version 3.
-; You can use, redistribute this file and/or modify it under the terms of the GNU General Public License version 3
-; ===================================================
-; $Date: 2011-01-27 19:46:34 +0100 (Thu, 27 Jan 2011) $
-; $Revision: 658 $
-; $Author: Radek Suski $
-; $HeadURL: https://svn.suski.eu/SobiPro/Component/trunk/Site/etc/paypal.ini $
+
+; @copyright Copyright (C) 2006 - 2013 Sigsiu.NET GmbH (http://www.sigsiu.net). All rights reserved.
+; @license GNU/GPL Version 3
+; This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3 as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
+; See http://www.gnu.org/licenses/gpl.html and http://sobipro.sigsiu.net/licenses.
+
+; This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
+
+; $Date$
+; $Revision$
+; $Author$
+; $HeadURL$
 
 [general]
 image="{cfg:img_folder_live}/adm/apps/paypal/paypal.gif"
