--- a/Component/branches/SobiPro-1.1/Site/usr/templates/default/config.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/templates/default/config.ini
@@ -23,6 +23,6 @@
 
 [general]
 template_type = "xslt"
-css_files = "default, bootstrap.bootstrap"
+css_files = "default, bootstrap.bootstrap, icons"
 js_files = "alpha, jquery, bootstrap"
 functions="template.php"
