dTree replaced to native JavaScript  method

--- a/Component/branches/SobiPro-1.1/Site/usr/templates/default/search/search.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/templates/default/search/search.ini
@@ -23,10 +23,10 @@
 
 [general]
 template_type = "xslt"
-css_files = "default, search"
+css_files = "default"
 js_files = "jquery,alpha,search"
 
 [form]
 action = "index.php"
-method = "post" 
-id = "spSearchForm" 
+method = "post"
+id = "spSearchForm"
