dTree replaced to native JavaScript  method

--- a/Component/branches/SobiPro-1.1/Site/usr/templates/default/entry/edit.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/templates/default/entry/edit.ini
@@ -24,10 +24,10 @@
 [general]
 template_type = "xslt"
 css_files = "default, edit"
-js_files = "jquery, edit"
+js_files = "jquery, bootstrap.tooltip, bootstrap.popover, edit"
 
 [form]
 action = "index.php"
 enctype = "multipart/form-data"
-method = "post" 
-id = "spEntryForm" 
+method = "post"
+id = "spEntryForm"
