add entry screen - first draft

--- a/Component/branches/SobiPro-1.1/Site/usr/templates/default/config.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/templates/default/config.ini
@@ -24,5 +24,5 @@
 [general]
 template_type = "xslt"
 css_files = "default, bootstrap.bootstrap, icons"
-js_files = "alpha, jquery, bootstrap"
+js_files = "alpha, jquery, bootstrap, bootstrap.typeahead, autosuggest"
 functions="template.php"
