übergeordneten .htaccess schreiben

--- a/Component/branches/SobiPro-1.1/Site/usr/templates/default/entry/edit.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/templates/default/entry/edit.ini
@@ -24,7 +24,7 @@
 [general]
 template_type = "xslt"
 css_files = "default, edit"
-js_files = "jquery, bootstrap.tooltip, bootstrap.popover, edit"
+js_files = "jquery, bootstrap.tooltips, bootstrap.popover, edit"
 
 [form]
 action = "index.php"
