Default template renamed to template default2

--- a/Component/branches/SobiPro-1.1/Site/etc/adm/config.ini
+++ b/Component/branches/SobiPro-1.1/Site/etc/adm/config.ini
@@ -81,3 +81,6 @@ fields_limit    = 15
 
 [apps]
 global_types_array = "field|acl|global_application|language|module"
+
+[templates]
+;disable-overrides="csv://8"
