--- a/Component/branches/SobiPro-1.1/Site/usr/templates/default2/search/search.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/templates/default2/search/search.ini
@@ -23,7 +23,7 @@
 
 [general]
 template_type = "xslt"
-css_files = "default,search"
+css_files = "default,search, bootstrap.bootstrap, icons"
 js_files = "jquery,alpha,search"
 
 [form]
