popover für info in add entry ist rechts statt oben Cancel Add entry geht nicht

--- a/Component/branches/SobiPro-1.1/Site/.htaccess
+++ b/Component/branches/SobiPro-1.1/Site/.htaccess
@@ -23,5 +23,5 @@
 
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} -f
-RewriteCond %{REQUEST_URI} \.php|\.ini|\.xml|\.xsl|\.db|\.tmp|\.var|\.jpg|\.png|\.bmp|\.gif
+RewriteCond %{REQUEST_URI} \.php|\.ini|\.xml|\.xsl|\.db|\.tmp|\.var
 RewriteRule ^(.*)$ index.php [R=403,L]
