(+) Custom redirect for accessing add entry form without permission    (+) Custom redirect for accessing entry details view without permission    (+) Custom redirect after a new entry has been added

--- a/Component/branches/SobiPro-1.1/Site/etc/config.ini
+++ b/Component/branches/SobiPro-1.1/Site/etc/config.ini
@@ -119,10 +119,19 @@ category_enabled = true
 category_url = "index.php"
 category_msgtype = "info"
 category_msg = "UNAUTHORIZED_ACCESS"
-entry_enabled = true
-entry_url = "index.php"
-entry_msgtype = "info"
-entry_msg = "UNAUTHORIZED_ACCESS"
+entry_access_enabled = false
+entry_access_url = "index.php"
+entry_access_msgtype = "info"
+entry_access_msg = "UNAUTHORIZED_ACCESS"
+entry_add_enabled = false
+entry_add_url = "index.php"
+entry_add_msgtype = "info"
+entry_add_msg = "UNAUTHORIZED_ACCESS"
+entry_save_enabled = false
+entry_save_url = "index.php"
+entry_save_msgtype = "info"
+entry_save_msg = "EN.ENTRY_SAVED_NA"
+
 
 [legacy]
 maxCats = 5
