(+) Possibility to define new permission to allow or disallow search function usage    (+) Custom redirect for accessing search function without permission

--- a/Component/branches/SobiPro-1.1/Site/etc/config.ini
+++ b/Component/branches/SobiPro-1.1/Site/etc/config.ini
@@ -111,11 +111,15 @@ show = true
 field_types = "json://['inbox','select','chbxgroup','multiselect']"
 
 [redirects]
-section_enabled = true
+section_enabled = false
 section_url = "index.php"
 section_msgtype = "info"
 section_msg = "UNAUTHORIZED_ACCESS"
-category_enabled = true
+section_search_enabled = false
+section_search_url = "index.php"
+section_search_msgtype = "info"
+section_search_msg = "UNAUTHORIZED_ACCESS"
+category_enabled = false
 category_url = "index.php"
 category_msgtype = "info"
 category_msg = "UNAUTHORIZED_ACCESS"
