XML - Storage and main views working

--- a/Component/branches/SobiPro-1.1/Site/etc/config.ini
+++ b/Component/branches/SobiPro-1.1/Site/etc/config.ini
@@ -20,6 +20,7 @@
 
 [general]
 top_menu = true
+debug = true
 
 [entry]
 primary_path_always = false
@@ -57,6 +58,7 @@ ui_theme = "smoothness.smoothness"
 [cache]
 js_compress_exceptions = "jquery.js,mootools.js"
 include_files = true
+xml_enabled = true
 
 [entry]
 primary_path_always = false
@@ -135,7 +137,6 @@ entry_save_enabled = false
 entry_save_url = "index.php"
 entry_save_msgtype = "info"
 entry_save_msg = "EN.ENTRY_SAVED_NA"
-
 
 [legacy]
 maxCats = 5
