--- a/Component/branches/SobiPro-1.1/Site/etc/config.ini
+++ b/Component/branches/SobiPro-1.1/Site/etc/config.ini
@@ -30,6 +30,9 @@ publish_limit = 0
 field_description = false
 approve_all_langs = true
 
+[lang]
+engb_preload = true
+
 [section]
 force_category_id = false;
 
