Bug #800 Problem with xml cache

--- a/Component/branches/SobiPro-1.1/Site/etc/config.ini
+++ b/Component/branches/SobiPro-1.1/Site/etc/config.ini
@@ -72,7 +72,7 @@ category_icons_live = "[cfg:img_folder_live]/images/"
 folder_ico = "[cfg:img_folder_live]/adm/folder-category.png"
 
 [browser]
-add_title = false
+add_title = true
 reverse_title = false
 full_title = false
 title_separator = ' - '
