(+) Section crawler - possibility to trigger complete cache creation

--- a/Component/branches/SobiPro-1.1/Site/etc/adm/section_menu.ini
+++ b/Component/branches/SobiPro-1.1/Site/etc/adm/section_menu.ini
@@ -27,6 +27,7 @@ section.entries = AMN.ALL_ENTRIES
 [AMN.SEC_CFG]
 field.list = AMN.FIELDS_MAN
 config.general = AMN.GEN_CFG
+config.crawler = CRAWLER.MENU
 
 [AMN.APPS_SECTION_HEAD]
 extensions.manage = AMN.APPS
