* efault template = default.css to the end
   * [X]whitespaces in url to %20

   * [ ]Navigation generates start/end navigation with site number

--- a/Component/branches/SobiPro-1.1/Site/usr/templates/default2/config.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/templates/default2/config.ini
@@ -23,6 +23,6 @@
 
 [general]
 template_type = "xslt"
-css_files = "default, bootstrap.bootstrap, icons"
+css_files = "bootstrap.bootstrap, icons, default"
 js_files = "alpha, jquery, bootstrap, bootstrap.typeahead, autosuggest"
 functions="template.php"
