--- a/Component/branches/SobiPro-1.1/Site/usr/templates/default2/entry/edit.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/templates/default2/entry/edit.ini
@@ -23,7 +23,7 @@
 
 [general]
 template_type = "xslt"
-css_files = "default,  bootstrap.bootstrap, icons, edit"
+css_files = "bootstrap.bootstrap, icons, edit, default"
 js_files = "jquery, bootstrap, bootstrap.tooltips, bootstrap.popover, edit"
 
 [form]
