(#) Non-unicode aliases (Issue #901)

--- a/Component/branches/SobiPro-1.1/Site/etc/calendar.ini
+++ b/Component/branches/SobiPro-1.1/Site/etc/calendar.ini
@@ -20,7 +20,7 @@
 
 [calendar]
 theme 			= "system"
-date_format		= "dd, M, y"
+date_format		= "d, M, y"
 date_format_txt	= "D, M d"
 button_label	= "..."
 button_side		= "right"
