.htaccess - added a conditional statement for redirects

--- a/Component/branches/SobiPro-1.1/Site/.htaccess
+++ b/Component/branches/SobiPro-1.1/Site/.htaccess
@@ -21,7 +21,9 @@
 # $HeadURL$
 
 
-RewriteEngine On
-RewriteCond %{REQUEST_FILENAME} -f
-RewriteCond %{REQUEST_URI} \.php|\.ini|\.xml|\.xsl|\.db|\.tmp|\.var
-RewriteRule ^(.*)$ index.php [R=403,L]
+<IfModule mod_rewrite.c>
+    RewriteEngine On
+    RewriteCond %{REQUEST_FILENAME} -f
+    RewriteCond %{REQUEST_URI} \.php|\.ini|\.xml|\.xsl|\.db|\.tmp|\.var
+    RewriteRule ^(.*)$ index.php [R=403,L]
+</IfModule>
