--- a/Component/branches/SobiPro-1.1/Site/etc/config.ini
+++ b/Component/branches/SobiPro-1.1/Site/etc/config.ini
@@ -29,6 +29,7 @@ maxCats = 5
 publish_limit = 0
 field_description = false
 approve_all_langs = true
+versioning = true
 
 [lang]
 engb_preload = true
@@ -63,8 +64,6 @@ js_compress_exceptions = "jquery.js,mootools.js"
 include_files = true
 xml_enabled = true
 
-[entry]
-primary_path_always = false
 
 [images]
 category_icons = "[cfg:images_folder]/images/"
