--- a/Component/branches/SobiPro-1.1/Site/usr/templates/default2/config.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/templates/default2/config.ini
@@ -18,11 +18,11 @@
 ; $Date$
 ; $Revision$
 ; $Author$
-; $HeadURL$
+; File location: components/com_sobipro/usr/templates/default2/config.ini $
 
 
 [general]
 template_type = "xslt"
-css_files = "bootstrap.bootstrap, icons, default"
+css_files = "bootstrap.bootstrap, icons, default,default-responsive"
 js_files = "alpha, jquery, bootstrap, bootstrap.typeahead, autosuggest"
 functions="template.php"
