--- a/Component/branches/SobiPro-1.1/Site/usr/templates/default2/entry/edit.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/templates/default2/entry/edit.ini
@@ -18,12 +18,12 @@
 ; $Date$
 ; $Revision$
 ; $Author$
-; $HeadURL$
+; File location: components/com_sobipro/usr/templates/default2/entry/edit.ini $
 
 
 [general]
 template_type = "xslt"
-css_files = "bootstrap.bootstrap, icons, edit, default"
+css_files = "bootstrap.bootstrap, icons, edit, form-responsive, default"
 js_files = "jquery, bootstrap, bootstrap.tooltips, bootstrap.popover, edit"
 
 [form]
