--- a/Component/branches/SobiPro-1.1/Site/usr/templates/default2/feeds/rss.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/templates/default2/feeds/rss.ini
@@ -18,7 +18,7 @@
 ; $Date$
 ; $Revision$
 ; $Author$
-; $HeadURL$
+; File location: components/com_sobipro/usr/templates/default2/feeds/rss.ini $
 
 
 [general]
