--- a/Component/branches/SobiPro-1.1/Site/usr/templates/default2/search/search.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/templates/default2/search/search.ini
@@ -18,12 +18,12 @@
 ; $Date$
 ; $Revision$
 ; $Author$
-; $HeadURL$
+; File location: components/com_sobipro/usr/templates/default2/search/search.ini $
 
 
 [general]
 template_type = "xslt"
-css_files = "default,search, bootstrap.bootstrap, icons"
+css_files = "default,search,form-responsive,search-responsive, bootstrap.bootstrap, icons"
 js_files = "jquery,bootstrap,alpha,search"
 
 [form]
