(#) Missing header title in administrator area

--- a/Component/branches/SobiPro-1.1/Site/etc/config.ini
+++ b/Component/branches/SobiPro-1.1/Site/etc/config.ini
@@ -63,6 +63,7 @@ ui_theme = "smoothness.smoothness"
 js_compress_exceptions = "jquery.js,mootools.js"
 include_files = true
 xml_enabled = true
+unique_search_url = true
 
 
 [images]
