(+) Timestamp to the URL of search results site to prevent caching by the Joomla! page cache plugin (adjustable in config.ini)

--- a/Component/branches/SobiPro-1.1/Site/etc/config.ini
+++ b/Component/branches/SobiPro-1.1/Site/etc/config.ini
@@ -63,7 +63,7 @@ ui_theme = "smoothness.smoothness"
 js_compress_exceptions = "jquery.js,mootools.js"
 include_files = true
 xml_enabled = true
-unique_search_url = true
+unique_search_url = false
 
 
 [images]
