(+) Moderate mode for history changes in the administrator area

--- a/Component/branches/SobiPro-1.1/Site/etc/config.ini
+++ b/Component/branches/SobiPro-1.1/Site/etc/config.ini
@@ -30,6 +30,7 @@ publish_limit = 0
 field_description = false
 approve_all_langs = true
 versioning = true
+versioningAdminBehaviour = true
 
 [lang]
 engb_preload = true
