Bug #1120 Images can't be exported by imex

--- a/Component/branches/SobiPro-1.1/Site/etc/adm/config.ini
+++ b/Component/branches/SobiPro-1.1/Site/etc/adm/config.ini
@@ -22,6 +22,9 @@
 [editing]
 def_cout_time = 3600
 
+[entry]
+approval_publish = true
+
 [html]
 tooltip_class = "editlinktip hasTip"
 editor = "cms.html.editor"
