--- a/Component/branches/SobiPro-1.1/Site/etc/config.ini
+++ b/Component/branches/SobiPro-1.1/Site/etc/config.ini
@@ -82,6 +82,7 @@ title_separator = ' - '
 ; word_filter = "/\p{L}+|\d+|%/iu"
 suggest_start_with = true
 suggest_min_chars = 1
+params_to_pass = "json://['rendercomponent','tmpl']"
 
 [meta]
 desc_append = true
