--- a/Component/branches/SobiPro-1.1/Site/usr/templates/default2/entry/edit.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/templates/default2/entry/edit.ini
@@ -24,7 +24,7 @@
 [general]
 template_type = "xslt"
 css_files = "bootstrap.bootstrap,icons,edit,form-responsive,default"
-js_files = "jquery,bootstrap,bootstrap.tooltips,bootstrap.popover,edit"
+js_files = "jquery,bootstrap,edit"
 
 [form]
 action = "index.php"
