--- a/Component/branches/SobiPro-1.1/Site/usr/templates/default2/config.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/templates/default2/config.ini
@@ -24,5 +24,5 @@
 [general]
 template_type = "xslt"
 css_files = "bootstrap.bootstrap,icons,default,default-responsive"
-js_files = "alpha,jquery,bootstrap,autosuggest"
+js_files = "alpha,jquery,bootstrap,bootstrap.typeahead,autosuggest"
 functions="template.php"
