default value for search result limit in config.ini file

--- a/Component/branches/SobiPro-1.1/Site/etc/config.ini
+++ b/Component/branches/SobiPro-1.1/Site/etc/config.ini
@@ -89,6 +89,7 @@ title_separator = ' - '
 suggest_start_with = true
 suggest_min_chars = 1
 params_to_pass = "json://['rendercomponent','tmpl']"
+result_limit = 1000
 
 [meta]
 desc_append = true
