datetime picker seems to works now

--- a/Component/branches/SobiPro-1.1/Site/etc/config.ini
+++ b/Component/branches/SobiPro-1.1/Site/etc/config.ini
@@ -73,7 +73,7 @@ category_icons_live = "[cfg:img_folder_live]/images/"
 folder_ico = "[cfg:img_folder_live]/adm/folder-category.png"
 
 [image_field]
-pass_exif = false
+pass_exif = true
 exif_id_data = "json://['Make', 'Model', 'Orientation', 'XResolution', 'YResolution', 'ResolutionUnit', 'Software', 'DateTime', 'YCbCrPositioning', 'Copyright', 'Exif_IFD_Pointer', 'CustomRendered', 'ExposureMode', 'WhiteBalance', 'DigitalZoomRatio', 'SceneCaptureType', 'YCbCrPositioning', 'CustomRendered', 'ExposureMode', 'WhiteBalance', 'DigitalZoomRatio', 'SceneCaptureType']"
 exif_data = "json://['ExposureTime', 'FNumber', 'ExposureProgram', 'ISOSpeedRatings', 'ExifVersion', 'DateTimeOriginal', 'DateTimeDigitized', 'CompressedBitsPerPixel', 'BrightnessValue', 'ExposureBiasValue', 'MaxApertureValue', 'MeteringMode', 'LightSource', 'Flash', 'FocalLength', 'FlashPixVersion', 'ColorSpace', 'ExifImageWidth', 'ExifImageLength', 'CustomRendered', 'ExposureMode', 'WhiteBalance', 'DigitalZoomRatio', 'SceneCaptureType', 'Contrast', 'Saturation', 'Sharpness', 'SubSecTimeOriginal', 'SubSecTimeDigitized']"
 exif_gps_data = "json://['Version','AltitudeRef','Altitude','Status','MeasureMode','DOP','SpeedRef','Speed','TrackRef','Track','ImgDirectionRef','ImgDirection','MapDatum','DateStamp','Differential']"
