--- a/Site/etc/files.ini
+++ b/Site/etc/files.ini
@@ -308,6 +308,7 @@ xls=application/vnd.ms-excel
 xlt=application/x-excel
 xlv=application/x-excel
 xlw=application/x-msexcel
+xcpp=text/x-c++
 xm=audio/xm
 xpm=image/xpm
 xsr=video/x-amt-showrun
