Possibility to define template functions globally

--- a/Site/etc/template_functions.ini
+++ b/Site/etc/template_functions.ini
@@ -37,7 +37,10 @@ wordwrap = true
 rand = true
 
 [Sobi]
-FixPath = true; 
+FixPath = true;
 
 ;[className]
 ;methodName = true
+
+;[usr.templates.front.funcs]
+;Cfg = true
