--- a/Site/etc/config.ini
+++ b/Site/etc/config.ini
@@ -32,6 +32,11 @@ approve_all_langs = true
 versioning = true
 versioningAdminBehaviour = true
 
+[icon-fonts]
+font-awesome-3="//maxcdn.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css"
+font-awesome-4="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"
+google-materials="//fonts.googleapis.com/icon?family=Material+Icons"
+
 [lang]
 engb_preload = true
 
