New default template (Part 4)

--- a/Site/usr/templates/default3/config.ini
+++ b/Site/usr/templates/default3/config.ini
@@ -23,6 +23,6 @@
 
 [general]
 template_type = "xslt"
-css_files = "bootstrap.bootstrap,icons,default"
+css_files = "bootstrap.bootstrap,icons,theme,default"
 js_files = "alpha,jquery,bootstrap,bootstrap.typeahead,autosuggest"
 functions="template.php"
