--- a/Site/usr/templates/default3/config.json
+++ b/Site/usr/templates/default3/config.json
@@ -1,1 +1,28 @@
-{"less":{"theme":{"colour-set":"sobipro","corners":"angular","small-image":"100px"}},"section-view":{"entries_limit":"2","entries_in_line":"2","entries_recursive":"0"},"category-view":{"entries_limit":"6","entries_in_line":"2","entries_ordering":"RAND()","entries_recursive":"1"},"general":{"entries_limit":"6","entries_in_line":"2","entries_ordering":"RAND()","noimage":"1","countentries":"0","entries_recursive":"1"}}
+{
+  "less": {
+    "theme": {
+      "colour-set": "sobipro",
+      "corners": "angular",
+      "small-image": "100px"
+    }
+  },
+  "section-view": {
+    "entries_limit": "2",
+    "entries_in_line": "2",
+    "entries_recursive": "0"
+  },
+  "category-view": {
+    "entries_limit": "6",
+    "entries_in_line": "2",
+    "entries_ordering": "RAND()",
+    "entries_recursive": "1"
+  },
+  "general": {
+    "entries_limit": "6",
+    "entries_in_line": "2",
+    "entries_ordering": "RAND()",
+    "noimage": "1",
+    "countentries": "0",
+    "entries_recursive": "1"
+  }
+}
