--- a/Site/usr/templates/B3-default3/config.json
+++ b/Site/usr/templates/B3-default3/config.json
@@ -4,7 +4,21 @@
       "colour-set": "sobipro",
       "corners": "angular",
       "small-image": "100px"
+    },
+    "review": {
+      "stars": "red-grey",
+      "bsversion": "bs3"
     }
+  },
+  "general": {
+    "hidecategories": "show",
+    "entries_limit": "6",
+    "entries_in_line": "2",
+    "entries_ordering": "RAND()",
+    "bs": "bs3",
+    "noimage": "1",
+    "countentries": "0",
+    "entries_recursive": "1"
   },
   "section-view": {
     "entries_limit": "2",
@@ -17,13 +31,10 @@
     "entries_ordering": "RAND()",
     "entries_recursive": "1"
   },
-  "general": {
-    "entries_limit": "6",
-    "entries_in_line": "2",
-    "entries_ordering": "RAND()",
-    "bs": "bs3",
-    "noimage": "1",
-    "countentries": "0",
-    "entries_recursive": "1"
+  "collection": {
+    "entries_limit": "4"
+  },
+  "entry-details": {
+    "entries_in_line": "1"
   }
 }
