(+) Possibility to load Bootstrap 3 from CDN

--- a/Site/etc/config.ini
+++ b/Site/etc/config.ini
@@ -37,6 +37,10 @@ font-awesome-3="//maxcdn.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.mi
 font-awesome-4="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"
 font-google-materials="//fonts.googleapis.com/icon?family=Material+Icons"
 
+[template]
+bs3_css="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"
+bs3_js="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"
+
 [lang]
 engb_preload = true
 
