--- a/Site/usr/templates/default3/config.json
+++ b/Site/usr/templates/default3/config.json
@@ -3,6 +3,9 @@
     "theme": {
       "colour-set": "sobipro",
       "corners": "angular",
+      "image-ratio": "0.75",
+      "big-image": "inherit",
+      "carousel-image": "inherit",
       "small-image": "100px"
     },
     "review": {
@@ -10,24 +13,27 @@
       "bsversion": "bs2"
     }
   },
+  "general": {
+    "textlength": "no",
+    "hidecategories": "show",
+    "entries_limit": "6",
+    "entries_in_line": "2",
+    "entries_ordering": "RAND()",
+    "extendedsearch": "show",
+    "noimage": "1",
+    "countentries": "0",
+    "entries_recursive": "1"
+  },
   "section-view": {
     "entries_limit": "2",
     "entries_in_line": "2",
+    "entries_ordering": "position.asc",
     "entries_recursive": "0"
   },
   "category-view": {
     "entries_limit": "6",
     "entries_in_line": "2",
     "entries_ordering": "RAND()",
-    "entries_recursive": "1"
-  },
-  "general": {
-    "hidecategories": "show",
-    "entries_limit": "6",
-    "entries_in_line": "2",
-    "entries_ordering": "RAND()",
-    "noimage": "1",
-    "countentries": "0",
     "entries_recursive": "1"
   },
   "collection": {
