(+) Ajax navigation in listing views

--- a/Site/usr/templates/B3-default3/config.ini
+++ b/Site/usr/templates/B3-default3/config.ini
@@ -18,5 +18,5 @@
 [general]
 template_type = "xslt"
 css_files = "bootstrap.bootstrap,icons,theme,default"
-js_files = "alpha,jquery,bootstrap,bootstrap.b3typeahead,autosuggest"
+js_files = "alpha,jquery,bootstrap,bootstrap.b3typeahead,autosuggest,navigation"
 functions="template.php"
