--- a/Site/usr/templates/default3/config.json
+++ b/Site/usr/templates/default3/config.json
@@ -14,12 +14,13 @@
     }
   },
   "general": {
+    "extendedsearch": "show",
     "textlength": "no",
     "hidecategories": "show",
+    "pagination": "std",
     "entries_limit": "6",
     "entries_in_line": "2",
-    "entries_ordering": "RAND()",
-    "extendedsearch": "show",
+    "entries_ordering": "updatedTime.desc",
     "noimage": "1",
     "countentries": "0",
     "entries_recursive": "1"
@@ -33,7 +34,7 @@
   "category-view": {
     "entries_limit": "6",
     "entries_in_line": "2",
-    "entries_ordering": "RAND()",
+    "entries_ordering": "updatedTime.desc",
     "entries_recursive": "1"
   },
   "collection": {
