--- a/Site/usr/templates/default3/section/ajax.ini
+++ b/Site/usr/templates/default3/section/ajax.ini
@@ -14,9 +14,6 @@
 ; This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
 ; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 
-
 [general]
-template_type = "xslt"
-css_files = "bootstrap.bootstrap,icons,theme,default"
-js_files = "alpha,jquery,bootstrap,bootstrap.typeahead,autosuggest,navigation"
-functions="template.php"
+entries_recursive = true
+
