(+) Possibility to load a local version of Bootstrap 3 with 'SobiPro' namespace

--- a/Site/etc/config.ini
+++ b/Site/etc/config.ini
@@ -1,22 +1,16 @@
-; @version: $Id$
 ; @package: SobiPro Component for Joomla!
 
 ; @author
 ; Name: Sigrid Suski & Radek Suski, Sigsiu.NET GmbH
 ; Email: sobi[at]sigsiu.net
-; Url: http://www.Sigsiu.NET
+; Url: https://www.Sigsiu.NET
 
-; @copyright Copyright (C) 2006 - 2015 Sigsiu.NET GmbH (http://www.sigsiu.net). All rights reserved.
+; @copyright Copyright (C) 2006 - 2016 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
 ; @license GNU/GPL Version 3
 ; This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3 as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
-; See http://www.gnu.org/licenses/gpl.html and http://sobipro.sigsiu.net/licenses.
+; See http://www.gnu.org/licenses/gpl.html and https://www.sigsiu.net/licenses.
 
 ; This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
-
-; $Date$
-; $Revision$
-; $Author$
-; $HeadURL$
 
 [general]
 top_menu = true
@@ -38,8 +32,8 @@ font-awesome-4="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.mi
 font-google-materials="//fonts.googleapis.com/icon?family=Material+Icons"
 
 [template]
-bs3_css="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"
-bs3_js="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"
+bs3_css="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
+bs3_js="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
 
 [lang]
 engb_preload = true
