(#) Bootstrap 2 loaded in B3-default3 template (+) Bootstrap 2 overwrite file for Bootstrap 3 template

--- a/Site/usr/templates/B3-default3/config.ini
+++ b/Site/usr/templates/B3-default3/config.ini
@@ -17,6 +17,6 @@
 
 [general]
 template_type = "xslt"
-css_files = "bootstrap.bootstrap,icons,theme,default"
-js_files = "alpha,jquery,bootstrap,bootstrap.b3typeahead,autosuggest,navigation"
+css_files = "theme,default"
+js_files = "alpha,jquery,bootstrap.b3typeahead,autosuggest,navigation"
 functions="template.php"
