--- a/Site/usr/templates/B3-default3/search/search.ini
+++ b/Site/usr/templates/B3-default3/search/search.ini
@@ -17,7 +17,7 @@
 
 [general]
 template_type = "xslt"
-js_files = "jquery,bootstrap,alpha,navigation,search"
+js_files = "jquery,alpha,navigation,search"
 
 [form]
 action = "index.php"
