(+) New template theme 'waterfall'

--- a/Site/usr/templates/default3/config.json
+++ b/Site/usr/templates/default3/config.json
@@ -1,46 +1,1 @@
-{
-  "less": {
-    "theme": {
-      "colour-set": "sobipro",
-      "corners": "angular",
-      "image-ratio": "0.75",
-      "big-image": "inherit",
-      "carousel-image": "inherit",
-      "small-image": "100px"
-    },
-    "review": {
-      "stars": "red-grey",
-      "bsversion": "bs2"
-    }
-  },
-  "general": {
-    "extendedsearch": "show",
-    "textlength": "no",
-    "hidecategories": "show",
-    "pagination": "std",
-    "entries_limit": "6",
-    "entries_in_line": "2",
-    "entries_ordering": "updatedTime.desc",
-    "noimage": "1",
-    "countentries": "0",
-    "entries_recursive": "1"
-  },
-  "section-view": {
-    "entries_limit": "2",
-    "entries_in_line": "2",
-    "entries_ordering": "position.asc",
-    "entries_recursive": "0"
-  },
-  "category-view": {
-    "entries_limit": "6",
-    "entries_in_line": "2",
-    "entries_ordering": "updatedTime.desc",
-    "entries_recursive": "1"
-  },
-  "collection": {
-    "entries_limit": "4"
-  },
-  "entry-details": {
-    "entries_in_line": "1"
-  }
-}
+{"less":{"theme":{"colour-set":"sobipro","corners":"angular","fontsize":"14px","image-ratio":"0.75","big-image":"inherit","carousel-image":"inherit","small-image":"100px"},"review":{"stars":"red-grey","bsversion":"bs2"}},"general":{"extendedsearch":"show","textlength":"no","hidecategories":"show","pagination":"std","entries_limit":"6","entries_in_line":"2","entries_ordering":"updatedTime.desc","noimage":"1","countentries":"0","entries_recursive":"1"},"section-view":{"entries_limit":"2","entries_in_line":"2","entries_ordering":"position.asc","entries_recursive":"0"},"category-view":{"entries_limit":"6","entries_in_line":"2","entries_ordering":"updatedTime.desc","entries_recursive":"1"}}
