--- a/Site/usr/templates/B3-default3/config.json
+++ b/Site/usr/templates/B3-default3/config.json
@@ -1,1 +1,42 @@
-{"less":{"theme":{"colour-set":"waterfall","corners":"rounded","fontsize":"14px","image-ratio":"0.75","big-image":"inherit","carousel-image":"inherit","small-image":"100px"},"review":{"stars":"red-grey","bsversion":"bs3"}},"general":{"extendedsearch":"show","textlength":"no","hidecategories":"show","pagination":"std","entries_limit":"6","entries_in_line":"2","entries_ordering":"updatedTime.desc","bs":"bs3","noimage":"1","countentries":"0","entries_recursive":"1"},"section-view":{"entries_limit":"2","entries_in_line":"2","entries_ordering":"position.asc","entries_recursive":"0"},"category-view":{"entries_limit":"6","entries_in_line":"2","entries_ordering":"updatedTime.desc","entries_recursive":"1"}}
+{
+  "less": {
+    "theme": {
+      "colour-set": "sobipro",
+      "corners": "angular",
+      "fontsize": "14px",
+      "image-ratio": "0.75",
+      "big-image": "inherit",
+      "carousel-image": "inherit",
+      "small-image": "100px"
+    },
+    "review": {
+      "stars": "red-grey",
+      "bsversion": "bs3"
+    }
+  },
+  "general": {
+    "extendedsearch": "show",
+    "textlength": "no",
+    "hidecategories": "show",
+    "pagination": "std",
+    "entries_limit": "6",
+    "entries_in_line": "2",
+    "entries_ordering": "updatedTime.desc",
+    "bs": "bs3",
+    "noimage": "1",
+    "countentries": "0",
+    "entries_recursive": "1"
+  },
+  "section-view": {
+    "entries_limit": "2",
+    "entries_in_line": "2",
+    "entries_ordering": "position.asc",
+    "entries_recursive": "0"
+  },
+  "category-view": {
+    "entries_limit": "6",
+    "entries_in_line": "2",
+    "entries_ordering": "updatedTime.desc",
+    "entries_recursive": "1"
+  }
+}
