(+) Added unpublished sign to unpublished categories

--- a/Site/usr/templates/default3/config.ini
+++ b/Site/usr/templates/default3/config.ini
@@ -18,5 +18,5 @@
 [general]
 template_type = "xslt"
 css_files = "bootstrap.bootstrap,icons,theme,default"
-js_files = "alpha,jquery,bootstrap,bootstrap.typeahead,autosuggest,navigation"
+js_files = "alpha,jquery,sobipro.tooltip,bootstrap,bootstrap.typeahead,autosuggest,navigation"
 functions="template.php"
