(+) Possibility to ignore storing in default language

--- a/Site/etc/config.ini
+++ b/Site/etc/config.ini
@@ -37,6 +37,7 @@ bs3_js="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
 
 [lang]
 engb_preload = true
+ignore_default = false
 
 [section]
 force_category_id = false;
