(!) publishing_format set to a more readable format by default

--- a/Site/etc/config.ini
+++ b/Site/etc/config.ini
@@ -54,7 +54,9 @@ editor = "cms.html.editor"
 pre_to_entities = true
 
 [date]
-publishing_format = "Y-m-d H:i:s"
+;publishing_format = "Y-m-d H:i:s"
+publishing_format = "j F Y H:i:s"
+
 log_format = "D M j G:i:s T Y"
 db_format = "Y-m-d H:i:s"
 
