(+) Image field: original image name without extension used for alt and title tag

--- a/Site/etc/adm/config.ini
+++ b/Site/etc/adm/config.ini
@@ -33,7 +33,8 @@ allowed_attributes_array = "class|id|style|href|src|name|alt|title"
 editor_buttons = false
 
 [date]
-publishing_format = "Y-m-d H:i:s"
+;publishing_format = "Y-m-d H:i:s"
+publishing_format = "j F Y H:i:s"
 log_format = "D M j G:i:s T Y"
 db_format = "Y-m-d H:i:s"
 
