(-) SobiPro template theme 'blackwidow' removed 	(+) Colour styles for Gallery field added

--- a/Site/etc/adm/config.ini
+++ b/Site/etc/adm/config.ini
@@ -1,4 +1,3 @@
-; @version: $Id$
 ; @package: SobiPro Component for Joomla!
 
 ; @author
@@ -6,18 +5,12 @@
 ; Email: sobi[at]sigsiu.net
 ; Url: http://www.Sigsiu.NET
 
-; @copyright Copyright (C) 2006 - 2015 Sigsiu.NET GmbH (http://www.sigsiu.net). All rights reserved.
+; @copyright Copyright (C) 2006 - 2016 Sigsiu.NET GmbH (http://www.sigsiu.net). All rights reserved.
 ; @license GNU/GPL Version 3
 ; This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3 as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
 ; See http://www.gnu.org/licenses/gpl.html and http://sobipro.sigsiu.net/licenses.
 
 ; This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
-
-; $Date$
-; $Revision$
-; $Author$
-; $HeadURL$
-
 
 [editing]
 def_cout_time = 3600
@@ -88,3 +81,6 @@ global_types_array = "field|acl|global_application|language|module"
 
 [templates]
 ;disable-overrides="csv://8"
+
+[image]
+ico_size="100:100"
