(+) Support for Entries Module added to the templates

--- a/Site/usr/templates/b3-default3/config.json
+++ b/Site/usr/templates/b3-default3/config.json
@@ -18,13 +18,16 @@
     "navigationlinks": "topmenu",
     "basefont": "none",
     "specialfont": "none",
+    "redirectlogin": "",
     "extendedsearch": "show",
     "textlength": "no",
     "hidecategories": "show",
     "pagination": "std",
+    "fieldsposition": "above",
     "entries_limit": "6",
     "entries_in_line": "2",
     "entries_ordering": "updatedTime.desc",
+    "module_eil": "1",
     "bs": "bs3",
     "noimage": "1",
     "countentries": "0",
