--- a/Site/usr/templates/default3/config.json
+++ b/Site/usr/templates/default3/config.json
@@ -35,13 +35,20 @@
     "entries_limit": "2",
     "entries_in_line": "2",
     "entries_ordering": "position.asc",
+    "categories_in_line": "2",
+    "categories_ordering": "name.asc",
     "entries_recursive": "0"
   },
   "category-view": {
     "entries_limit": "6",
     "entries_in_line": "2",
     "entries_ordering": "updatedTime.desc",
+    "categories_in_line": "2",
+    "categories_ordering": "name.asc",
     "entries_recursive": "1"
+  },
+  "collection": {
+    "entries_limit": "2"
   },
   "entry-details": {
     "entries_in_line": "1"
