--- a/Site/usr/templates/default3/feeds/rss.ini
+++ b/Site/usr/templates/default3/feeds/rss.ini
@@ -18,7 +18,7 @@
 [general]
 template_type = "xslt"
 output = xml
-categories_limit = 0
+;categories_limit = 0
 
 [output]
 header = "Content-Type: application/xml; charset=utf-8"
