--- a/Site/usr/templates/default3/config.ini
+++ b/Site/usr/templates/default3/config.ini
@@ -17,6 +17,6 @@
 
 [general]
 template_type = "xslt"
-css_files = "bootstrap.bootstrap,icons,theme,default"
+css_files = "icons,theme,default"
 js_files = "alpha,jquery,sobipro.tooltip,bootstrap,bootstrap.typeahead,autosuggest,navigation"
 functions="template.php"
