(-) clean-up of loaded scripts in template

--- a/Site/usr/templates/b3-default3/config.ini
+++ b/Site/usr/templates/b3-default3/config.ini
@@ -18,5 +18,5 @@
 [general]
 template_type = "xslt"
 css_files = "theme,default"
-js_files = "alpha,jquery,bootstrap.b3typeahead,autosuggest,navigation"
+js_files = "alpha,bootstrap.b3typeahead,autosuggest,navigation"
 functions="template.php"
