--- a/Site/usr/templates/default3/entry/details.ini
+++ b/Site/usr/templates/default3/entry/details.ini
@@ -17,5 +17,5 @@
 
 [general]
 template_type = "xslt"
-js_files = "alpha,jquery,bootstrap,bootstrap.b3typeahead,autosuggest,details"
+js_files = "alpha,bootstrap.b3typeahead,autosuggest,details"
 
