--- a/Site/usr/templates/default3/entry/edit.ini
+++ b/Site/usr/templates/default3/entry/edit.ini
@@ -17,7 +17,7 @@
 
 [general]
 template_type = "xslt"
-js_files = "jquery,bootstrap,edit,bootstrap.tooltips,bootstrap.popover"
+js_files = "edit,bootstrap.tooltips,bootstrap.popover"
 
 [form]
 action = "index.php"
